--- a/blocks/places/__website-link/places__website-link.css
+++ b/blocks/places/__website-link/places__website-link.css
@@ -10,6 +10,7 @@
 .places__website-link:hover {
     color: #FFFFFF;
     opacity: 0.8;
+    transition: opacity 0.3s;
 }
 
 @media (max-width: 768px) {
