--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,29 +1,16 @@
 .cover__subtitle {
-    position: absolute;
     text-align: center;
     max-width: 360px;
-    margin: 0;
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
-    top: 429px;
-}
-
-@media (max-width: 1024px) {
-    .cover__subtitle { 
-        top: 379px;
-    }
-}
-
-@media (max-width: 768px) {
-    .cover__subtitle { 
-        top: 299px;
-    }
+    margin: 0;
+    color: #FFFFFF;
+    z-index: 1;
 }
 
 @media (max-width: 500px) {
     .cover__subtitle { 
-        top: 119px;
         font-size: 14px;
         line-height: 16px;
     }
