--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,29 +1,16 @@
 .cover__title {
-    position: absolute;
     text-align: center;
-    top: 245px;
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
     max-width: 560px;
-    margin: 0 auto;
-}
-
-@media (max-width: 1024px) {
-    .cover__title { 
-        top: 195px;
-    }
-}
-
-@media (max-width: 768px) {
-    .cover__title { 
-        top: 115px;
-    }
+    color: #FFFFFF;
+    margin: 0;
+    z-index: 1;
 }
 
 @media (max-width: 500px) {
     .cover__title { 
-        top: 33px;
         font-size: 32px;
         line-height: 35px;
     }
