--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -4,24 +4,26 @@
     line-height: 14px;
     letter-spacing: 1.5px;
     text-transform: uppercase;
-    margin: 8px 0 0;
+    margin-top: 5px;
 }
 
 @media (max-width: 1024px) {
     .lead__caption {
-        margin: 8px 0 0 28px;
+        margin-top: 5px;
     } 
 }
 
 @media (max-width: 768px) {
     .lead__caption {
-        margin: 8px 0 0 24px;
+        margin-top: 5px;
+        padding-left: 24px;
     } 
 }
 
 
 @media (max-width: 320px) {
     .lead__caption {
-        margin: 8px 0 0 16px;
+        margin-top: 5px;
+        padding-left: 16px;
     } 
 }
