--- a/blocks/places/__paragraphar/places__paragraphar.css
+++ b/blocks/places/__paragraphar/places__paragraphar.css
@@ -11,9 +11,10 @@
     } 
 }
 
-@media (max-width: 320px) {
+/* @media (max-width: 320px) {
     .places__paragraphar {
-        width: 280px;
+        max-width: 304px;
+        padding-left: 16px;
     } 
-}
+} */
 
