--- a/blocks/places/__website-title/places__website-title.css
+++ b/blocks/places/__website-title/places__website-title.css
@@ -1,4 +1,5 @@
 .places__website-title {
+    text-transform: uppercase;
     margin: 0;
     font-weight: 400;
     font-size: 12px;
@@ -7,16 +8,8 @@
     letter-spacing: 2px;
 }
 
-@media (max-width: 768px) {
-    .places__website-title {
-        line-height: 12px;
-        padding-bottom: 12px;  
-    } 
-}
-
 @media (max-width: 320px) {
     .places__website-title {
         padding-left: 16px;
-        padding-bottom: 0;
     } 
 }  
