--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,7 +1,8 @@
 .cover__link {
     position: relative;
     background-image: url(../../../images/cover-trains.jpg);
-    background-size: contain;
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
@@ -10,6 +11,7 @@
     max-width: 1184px;
     min-height: 740px;
     text-decoration: none;
+    gap: 32px;
 }
 
 @media (max-width: 1024px) {
@@ -30,12 +32,13 @@
     .cover__link { 
         min-height: 200px;
         margin-top: 66px;
+        gap: 16px;
     }
 }
 
 .cover__link::before {
     content: "";
-    background: #000;
+    background: #2A2C2F;
     opacity: 0.3;
     position: absolute;
     top: 0;
