--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -7,7 +7,7 @@
     "image text";
     column-gap: 40px;
     row-gap: 48px;
-    margin-top: 80px;
+    margin: 80px auto 0;
 }
 
 .places__place:first-of-type {
@@ -21,27 +21,51 @@
     } 
 }
 
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     .places__place {
         grid-template-columns: 340px 1fr;
         column-gap: 28px;
-        margin-top: 70px;
+        margin: 70px auto 0;
+        max-width: 720px;
+    } 
+} */
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .places__place {
+        grid-template-columns: 340px 1fr;
+        column-gap: 28px;
+        margin: 70px auto 0;
         max-width: 720px;
     } 
 }
 
-@media (max-width: 520px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
     .places__place {
         grid-template-areas:
         "title" 
         "website" 
         "image"
         "text";
-        grid-template-columns: auto;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4,auto);
+        row-gap: 34px;
+        justify-items: center;
+        margin: 48px auto 0;
+    } 
+}
+
+/* @media (max-width: 520px) {
+    .places__place {
+        grid-template-areas:
+        "title" 
+        "website" 
+        "image"
+        "text";
+        grid-template-columns: 1fr;
         grid-template-rows: repeat(4,auto);
         row-gap: 34px;
         justify-items: start;
-        margin-top: 48px;
+        margin: 48px auto 0;
     } 
-}
+} */
 
