--- a/blocks/places/__text/places__text.css
+++ b/blocks/places/__text/places__text.css
@@ -15,7 +15,7 @@
 }
 
 
-@media (max-width: 320px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
     .places__text {
         max-width: 285px;
         padding-left: 16px;
