--- a/blocks/places/__website-title/places__website-title.css
+++ b/blocks/places/__website-title/places__website-title.css
@@ -8,8 +8,8 @@
     letter-spacing: 2px;
 }
 
-@media (max-width: 320px) {
+/* @media (max-width: 320px) {
     .places__website-title {
         padding-left: 16px;
     } 
-}  
+}   */
