--- a/blocks/places/__title/places__title.css
+++ b/blocks/places/__title/places__title.css
@@ -21,7 +21,7 @@
     .places__title {
         font-size: 32px;
         line-height: 35px;
-        padding-left: 16px;
+        /* padding-left: 16px; */
         max-width: 290px;
     } 
 }
