--- a/blocks/places/__website-link/places__website-link.css
+++ b/blocks/places/__website-link/places__website-link.css
@@ -19,8 +19,8 @@
     } 
 }
 
-@media (max-width: 320px) {
+/* @media (max-width: 320px) {
     .places__website-link {
         padding-left: 16px;
     } 
-}  
+}   */
